pkg/provider/kubernetes/ingress/fixtures/TLS-support-without-annotation_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ""
  namespace: testing

spec:
  tls:
  - secretName: my-tls-secret
  rules:
  - host: example.com
    http:
      paths:
      - path: ""
        backend:
          serviceName: example-com
          servicePort: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ""
  namespace: testing

spec:
  tls:
  - secretName: my-undefined-secret
  rules:
  - host: example.fail
    http:
      paths:
      - path: ""
        backend:
          serviceName: example-fail
          servicePort: 80
